# webseed

./: .env.example  .gitignore  CLAUDE.md  FIXPLAN.md  LICENSE  PRODUCT_REVIEW.md  README.md  TODO.md  USAGE.md  deployer.py  generator.py  maps.py  pipeline.py  pyproject.toml  requirements.txt  tester.py  webseed.speq
.claude/: hookify.block-brace-escaping.local.md
prompts/: site_gen.txt
src/webseed/: __main__.py  claude_cli.py  deployer.py  emailer.py  generator.py  maps.py  pipeline.py  store.py  tester.py  utils.py
src/webseed/prompts/: code_review.txt  email_gen.txt  email_gen_system.txt  fix_html.txt  site_gen.txt  site_gen_no_photos.txt  site_gen_photos.txt  site_gen_system.txt  testing.md  visual_test.txt
